# charmeleon

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  Makefile  README.md  README.rst  charmeleon.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: publish-cd.yaml  pull-request-ci.yaml  push-main-ci.yaml  release-publish-cd.yaml
_sources/: charmeleon.rst.txt
asset/: coverage.json
charmeleon/: __init__.py  error.py  width.py
charmeleon/go/: darwin_amd64  darwin_amd64.h  darwin_arm64  linux_amd64  linux_arm64
charmeleon/table/: __init__.py  alpha.py  ascii.py  digit.py  kana.py  punct.py
charmeleon/table/template/: alpha.py.j2  ascii.py.j2  digit.py.j2  kana.py.j2  punct.py.j2
docs/source/: conf.py  index.rst  modules.rst
libs/go/: go.mod  main.go
scripts/: check-coverage.sh  generate_table.py  table.py
tests/: width.py
tests/width/: test_width.py  test_width_alpha.py  test_width_digit.py  test_width_kana.py  test_width_punct.py
