[tool.poetry]
name = "charmeleon"
version = "0.0.0"
description = "charmeleon is a character conversion library in Python."
authors = ["yut-kt <yut.kt59@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.292"
pre-commit = "^3.4.0"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.ruff]
select = ["ALL"]
